all conect updated

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <section class="home" id="home">
         <div class="home__container--intro container">
           <h1>
-            <span class="intro-title">Welcome to<br /></span>
+            <span class="intro-title">Welcome <br /> To</span>
             <span class="intro-subtitle" id="word">TEDxOAU</span>
           </h1>
         </div>
@@ -92,20 +92,11 @@
 
           <div class="bad-look">
             <h2 class="hero__text hero__text--sub">
-              <strong>We are...</strong> <br />
-              <br />
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old. Richard McClintock, a Latin
-              professor at Hampden-Sydney College in Virginia, looked up one of
-              the more obscure Latin words, consectetur, from a Lorem Ipsum
-              passage, and going through the cites of the word in classical
-              literature, discovered the undoubtable source. Lorem Ipsum comes
-              from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et
-              Malorum" (The Extremes of Good and Evil) by Cicero, written in 45
-              BC. This book is a treatise on the theory of ethics, very popular
-              during the Renaissance. The first line of Lorem Ipsum, "Lorem
-              ipsum dolor sit amet..", comes from a line in section 1.10.32
+              <!--<strong>We are...</strong> <br />
+              <br />-->
+              The Obafemi Awolowo University community has always been home to amazing conversations, tenacious humans, radical innovations, a little too many tote bags, and—of course—its iconic bats. Now, it’s going to be a hotspot for ideas worth spreading by humans worth listening to on grounds we’ve come to love.
+              And whether you identify as an Awo boy or a Maintenance chick, a fresher or a stallite, a T-shirt fanatic or a fashion icon, an environmentally-conscious trekker or a bike addict, a shana or a… well, whatever—there’s a TEDxOAU Talk that’s just right for you.
+              We’d love for you to join us.
             </h2>
             <h2 class="hero__text hero__text--font">
               this site and all it’s components in pay homage to helvetica and
@@ -131,21 +122,14 @@
 
         <div class="blog__wrapper">
           <h2 class="blog__header container">
-            Is Volunteering <br />Worth It??
+            TED, TEDx, and TEDxOAU:
           </h2>
           <article class="blog__container container">
             <div class="blog__description grid">
               <p class="blog__summary">
-                A large group of volunteers dedicate their time and energy to
-                set up events and build our community, acting as personal
-                ambassadors for change and innovation. With their professional
-                skills and knowledge, our volunteers bring ideas to life from
-                behind the scenes to the day of the events. We are a hundred
-                percent volunteer-led organisation and are run solely on the
-                enthusiasm of our partners, collaborators and volunteers.
-                Together we bring ideas to life that go beyond limitation and
-                pushes boundaries to create a better city, a better world Be
-                part of this movement, join us!
+                New to the wonderful world of TED?
+                No problem!
+                This article is a great place to start from to learn about the iconic conferences and talks.
               </p>
               <a href="https://tedxoau.com/blog/" class="blog__link"
                 ><span>See More</span><i class="bx bx-right-arrow-alt"></i
@@ -154,7 +138,7 @@
             <!--==================== TEAM1 ====================-->
             <div class="blog__contents">
               <img
-                src="./resource/sample_blog.png"
+                src="./resource//live_blogs.jpg"
                 alt="blog_post"
                 class="blog__img"
               />
@@ -164,21 +148,13 @@
 
         <div class="blog__wrapper de-active">
           <h2 class="blog__header container">
-            Is Volunteering <br />Worth It???
+            Our top 10 TEDx talks.
           </h2>
           <article class="blog__container container">
             <div class="blog__description grid">
               <p class="blog__summary">
-                A large group of volunteers dedicate their time and energy to
-                set up events and build our community, acting as personal
-                ambassadors for change and innovation. With their professional
-                skills and knowledge, our volunteers bring ideas to life from
-                behind the scenes to the day of the events. We are a hundred
-                percent volunteer-led organisation and are run solely on the
-                enthusiasm of our partners, collaborators and volunteers.
-                Together we bring ideas to life that go beyond limitation and
-                pushes boundaries to create a better city, a better world Be
-                part of this movement, join us!
+                From Chimamanda Ngozi Adichie to Malcolm Gladwell and Peace Itimi, learn what members of the TEDxOAU team consider the creme de la creme of TED Talks.
+                Disclaimer: All TED Talks rock!
               </p>
               <a href="https://tedxoau.com/blog/" class="blog__link"
                 ><span>See More</span><i class="bx bx-right-arrow-alt"></i
@@ -187,7 +163,7 @@
             <!--==================== TEAM1 ====================-->
             <div class="blog__contents">
               <img
-                src="./resource/sample_blog.png"
+                src="./resource//live_blogs.jpg"
                 alt="blog_post"
                 class="blog__img"
               />
@@ -197,21 +173,13 @@
 
         <div class="blog__wrapper de-active">
           <h2 class="blog__header container">
-            Is Volunteering <br />Worth It???😍
+            Volunteers are now On-board
           </h2>
           <article class="blog__container container">
             <div class="blog__description grid">
               <p class="blog__summary">
-                A large group of volunteers dedicate their time and energy to
-                set up events and build our community, acting as personal
-                ambassadors for change and innovation. With their professional
-                skills and knowledge, our volunteers bring ideas to life from
-                behind the scenes to the day of the events. We are a hundred
-                percent volunteer-led organisation and are run solely on the
-                enthusiasm of our partners, collaborators and volunteers.
-                Together we bring ideas to life that go beyond limitation and
-                pushes boundaries to create a better city, a better world Be
-                part of this movement, join us!
+                Our Volunteers are aboard and we're so excited. So much so that we had a chit-chat with the Volunteer management team how it went getting them on-board.
+                Have a look.
               </p>
               <a href="https://tedxoau.com/blog/" class="blog__link"
                 ><span>See More</span><i class="bx bx-right-arrow-alt"></i
@@ -220,7 +188,7 @@
             <!--==================== TEAM1 ====================-->
             <div class="blog__contents">
               <img
-                src="./resource/sample_blog.png"
+                src="./resource//live_blogs.jpg""
                 alt="blog_post"
                 class="blog__img"
               />
@@ -230,21 +198,13 @@
 
         <div class="blog__wrapper de-active">
           <h2 class="blog__header container">
-            Is Volunteering <br />Worth It??????
+            What should you expect from TEDxOAU
           </h2>
           <article class="blog__container container">
             <div class="blog__description grid">
               <p class="blog__summary">
-                A large group of volunteers dedicate their time and energy to
-                set up events and build our community, acting as personal
-                ambassadors for change and innovation. With their professional
-                skills and knowledge, our volunteers bring ideas to life from
-                behind the scenes to the day of the events. We are a hundred
-                percent volunteer-led organisation and are run solely on the
-                enthusiasm of our partners, collaborators and volunteers.
-                Together we bring ideas to life that go beyond limitation and
-                pushes boundaries to create a better city, a better world Be
-                part of this movement, join us!
+                Either this is going to be your first TEDx event or you've been to several others, your gut-feeling still tells you TEDxOAU is going to be different, but you can't place it.
+                Here's what to expect.
               </p>
               <a href="https://tedxoau.com/blog/" class="blog__link"
                 ><span>See More</span><i class="bx bx-right-arrow-alt"></i
@@ -253,7 +213,7 @@
             <!--==================== TEAM1 ====================-->
             <div class="blog__contents">
               <img
-                src="./resource/sample_blog.png"
+                src="./resource//live_blogs.jpg"
                 alt="blog_post"
                 class="blog__img"
               />
@@ -267,15 +227,15 @@
       <!-- ================Communities Section============ -->
       <section class="updates-section section">
         <div class="updates container">
-          <a href="#" class="updates__box">
+          <a href="https://instagram.com/tedxoauofficial?igshid=YmMyMTA2M2Y=" target="_blank" class="updates__box">
+            <span class="updates__text">Follow Us</span></a
+          >
+          <a href="#" target="_blank" class="updates__box updates__box--white">
+            <span class="updates__text updates__text--red">Speaker</span>
+          </a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSd8qBW3mBk16VBNcuJLhI3647kuNhY511iB4b30OF7XWsUTqQ/viewform" target="_blank" class="updates__box">
             <span class="updates__text">Community</span></a
           >
-          <a href="#" class="updates__box updates__box--white">
-            <span class="updates__text updates__text--red">Sponsor</span>
-          </a>
-          <a href="#" class="updates__box">
-            <span class="updates__text">Volunteer</span>
-          </a>
         </div>
       </section>
     </main>
@@ -292,59 +252,21 @@
             <div class="upper_right-item">
               <h3>Meet</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
-                excepturi placeat alias doloribus dignissimos consequuntur,
-                minus nemo laboriosam repellat dolor?Lorem ipsum dolor sit amet
-                consectetur, adipisicing elit. Sed, molestias? Lorem ipsum,
-                dolor sit amet consectetur adipisicing elit. Repudiandae,
-                tenetur aliquid deleniti facere, nemo est non provident
-                doloremque enim culpa eos autem eligendi sequi suscipit sunt
-                corrupti, explicabo harum temporibus. Optio odit ea
-                necessitatibus non! Aliquam, iure possimus praesentium soluta
-                expedita alias eum ratione minus? Qui esse repellendus deserunt
-                optio! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Ut harum nobis perspiciatis dicta iusto rerum asperiores
-                distinctio nihil doloribus sed?
+                TED conferences are worldwide that open a world of opportunity to attendees, speakers, and sponsors. They provide platforms to share ideas, engage in exciting conversations, and network with amazing humans.
               </p>
             </div>
 
             <div class="upper_right-item">
               <h3>Connect</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-                voluptatibus fuga doloremque minus sapiente laudantium, nisi
-                corrupti ducimus aspernatur iste fugiat minima cumque est animi
-                illo sit atque expedita? Lorem, ipsum dolor sit amet consectetur
-                adipisicing elit. Voluptas, consequuntur odit perferendis
-                voluptates id ratione ab quos magni, maiores adipisci ipsam
-                asperiores similique sit sunt officia omnis rerum dolore
-                excepturi. Eligendi itaque cupiditate, non beatae nam asperiores
-                ipsa nisi voluptatum provident earum vel consequatur illo
-                tempore impedit vero velit quaerat laudantium totam, pariatur
-                sequi. Illum commodi, dignissimos delectus animi minima quia nam
-                mollitia beatae tempore non odio inventore eos rerum obcaecati
-                consequatur sunt, ad voluptas repellendus, quisquam tempora
-                eligendi! Est?
+                And like thousands of other TED and TEDx events that have held in the past, TEDxOAU holds the same promise of high-quality conversations and connections. But, of course, the conference will feature all the energy you’ve come to expect from the largest academic community in the ancient city of Ile-Ife.
               </p>
             </div>
 
             <div class="upper_right-item">
               <h3>Talk</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-                voluptatibus fuga doloremque minus sapiente laudantium, nisi
-                corrupti ducimus aspernatur iste fugiat minima cumque est animi
-                illo sit atque expedita? Lorem ipsum, dolor sit amet consectetur
-                adipisicing elit. Provident nulla hic porro pariatur vero ad
-                minus. Ipsum odit corrupti sequi eum repudiandae praesentium
-                molestias odio natus facilis commodi distinctio blanditiis
-                quaerat est hic velit expedita dolores doloribus sunt voluptates
-                animi, accusantium quisquam perspiciatis! Hic omnis nostrum
-                veniam esse error obcaecati temporibus provident, nihil,
-                corporis voluptatibus maxime voluptas vel earum fugiat, iusto
-                quo? Magni vitae soluta inventore fugit. Fuga quo nesciunt
-                quidem temporibus? Repudiandae veniam, sequi minus ullam eos eum
-                fuga.
+                Expect extraordinary talks from remarkable speakers on diverse topics, an opportunity to make impactful connections with progressive peers, as well as a chance to be a part of one of the biggest conferences on earth.
               </p>
             </div>
           </div>
@@ -354,8 +276,10 @@
           <div class="footer__container--lower_mail">
             <h2>Want to stay updated?</h2>
             <p>
-              Be the first to hear about our upcoming events,<br />
-              early bird ticket sales and ideas worth sharing. Sign Up
+              TEDxOAU is going to take Ogbafemi by storm and we want to put you in its eye:<br>       but we’d like to get in your DMs first. <br>
+              Drop your email address to get all TEDxOAU updates so you don’t miss a thing. <br>
+              We promise not to spam you!
+
             </p>
             <div class="footer__container--lower_input">
               <button class="lower_input-btn">Email</button>
@@ -372,18 +296,22 @@
             <div class="footer__list">
               <ul>
                 <li class="footer__list-item">
+                  <a href="#">Home</a>
+                </li>
+                <li class="footer__list-item">
                   <a href="about.html">About</a>
                 </li>
                 <li class="footer__list-item">
                   <a href="team.html">Meet Our Team</a>
                 </li>
-                <li class="footer__list-item"><a href="#">Sponsor</a></li>
-                <li class="footer__list-item"><a href="#">Blog</a></li>
-                <li class="footer__list-item"><a href="#">Contact Us</a></li>
+                
               </ul>
 
               <ul>
-                <li class="footer__list-item"><a href="#">FAQs</a></li>
+                <li class="footer__list-item"><a href="#">Sponsor</a></li>
+                <li class="footer__list-item"><a href="https://tedxoau.com/blog/">Blog</a></li>
+                <li class="footer__list-item"><a href="mailto:info@tedxoau.com">Contact Us</a></li>
+                <!-- <li class="footer__list-item"><a href="#">FAQs</a></li>
                 <li class="footer__list-item">
                   <a href="#">Programme Schedule</a>
                 </li>
@@ -391,7 +319,7 @@
                 <li class="footer__list-item">
                   <a href="#">Previous Sessions</a>
                 </li>
-                <li class="footer__list-item"><a href="#">Contact Us</a></li>
+                <li class="footer__list-item"><a href="#">Contact Us</a></li>-->
               </ul>
             </div>
 
