--- a/about.html
+++ b/about.html
@@ -75,48 +75,24 @@
       <section class="about section">
         <div class="about__container container">
           <div class="about__container--description">
-            <h2 class="about__container--description_title">TEDxOAU</h2>
-
-            <p class="about__container--description_summary">
-              TEDxOAU is an independently organized TED event under an
-              authorized license from TED at Obafemi Awolowo University,
-              Ile-Ife. It is an initiative that aims to bring together a
-              socially conscious community in OAU and make the youths involved
-              in the spectrum of IDEAS WORTH SPREADING. Holding for the second
-              time after a four-year hiatus break, TEDxOAU targets an audience
-              of students, young professionals and academic members of staff.
-              The conference hopes to shine the spotlight on interdisciplinary
-              speakers — including those from the local community — who will
-              ignite action, and encourage innovation, and critical discussion.
-            </p>
-          </div>
-
-          <div class="about__container--description">
             <h2 class="about__container--description_title">TED</h2>
 
             <p class="about__container--description_summary">
-              TED is a nonprofit organization devoted to Ideas Worth Spreading.
-              Started as a four-day conference in California 30 years ago, TED
-              has grown to support its mission with multiple initiatives. The
-              two annual TED Conferences invite the world’s leading thinkers and
-              doers to speak for 18 minutes or less. Many of these talks are
-              then made available, free, at TED.com. TED speakers have included
-              Bill Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson,
-              Nandan Nilekani, Philippe Starck, Ngozi Okonjo-Iweala, Sal Khan
-              and Daniel Kahneman. The annual TED Conference takes place each
-              spring in Vancouver, British Columbia. TED’s media initiatives
-              include TED.com, where new TED Talks are posted daily; TED
-              Translators, which provides subtitles and interactive transcripts
-              as well as translations from volunteers worldwide; the educational
-              initiative TED-Ed. TED has established The Audacious Project that
-              takes a collaborative approach to funding ideas with the potential
-              to create change at thrilling scale; TEDx, which supports
-              individuals or groups in hosting local, self- organized TED-style
-              events around the world, and the TED Fellows program, helping
-              world-changing innovators from around the globe to amplify the
-              impact of their remarkable projects and activities. Follow TED on
-              <a href="http://twitter.com/TEDTalks"> Twitter</a> or on at
-              <a href="http://www.facebook.com/TED"> Facebook</a>
+              TED is a nonprofit organization devoted to Ideas Worth Spreading. Started as a four-day conference in California 30 years ago, TED has grown to support its mission with multiple initiatives. The two annual TED Conferences invite the world’s leading thinkers and doers to speak for 18 minutes or less. Many of these talks are then made available for free at TED.com.
+              TED speakers have included Bill Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe Starck, Ngozi Okonjo-Iweala, Sal Khan, and Daniel Kahneman. The annual TED Conference takes place each spring in Vancouver, British Columbia.
+              TED’s media initiatives include TED.com, where new TED Talks are posted daily; TED Translators, which provides subtitles and interactive transcripts as well as translations from volunteers worldwide; and the educational initiative, TED-Ed.
+              TED has established The Audacious Project which takes a collaborative approach to funding ideas with the potential to create change at thrilling scales; TEDx, which supports individuals or groups in hosting local, self-organized TED-style events around the world; and the TED Fellows program, which helps world-changing innovators from around the globe to amplify the impact of their remarkable projects and activities.
+              Follow TED on <a href="http://twitter.com/TEDTalks">Twitter</a> or on at
+              <a href="http://www.facebook.com/TED">Facebook</a>
+            </p>
+          </div>
+
+          <div class="about__container--description">
+            <h2 class="about__container--description_title">TEDx</h2>
+            <p class="about__container--description_summary">
+              In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local, self-organized events that bring people together to share a TED-like experience.
+              Our event is called TEDxOAU, where x = independently organized TED event. At TEDxOAU, TED Talks videos and live speakers will combine to spark deep discussion and connection in a small group.
+              The TED Conference provides general guidance for the TEDx program, but individual TEDx events, including ours, are self-organized.             
             </p>
           </div>
 
@@ -124,15 +100,8 @@
             <h2 class="about__container--description_title">TEDxOAU</h2>
 
             <p class="about__container--description_summary">
-              In the spirit of ideas worth spreading, TED has created a program
-              called TEDx. TEDx is a program of local, self-organized events
-              that bring people together to share a TED-like experience. Our
-              event is called TEDxOAU, where x = independently organized TED
-              event. At our TEDxOAU event, TED Talks video and live speakers
-              will combine to spark deep discussion and connection in a small
-              group. The TED Conference provides general guidance for the TEDx
-              program, but individual TEDx events, including ours, are
-              self-organized.
+              TEDxOAU is an independently organized TED event under an authorized license from TED at Obafemi Awolowo University, Ile-Ife. It is an initiative that aims to bring together a socially conscious community in OAU and involve young people in discussions about IDEAS WORTH SPREADING.
+              Holding for the second time ever, and after a four-year hiatus—TEDxOAU targets an audience of students, young professionals, and academic members of staff. The conference hopes to shine the spotlight on interdisciplinary speakers — including those from the local community — who will ignite action, and encourage innovation and critical discussion.
             </p>
           </div>
         </div>
