--- a/index.html
+++ b/index.html
@@ -91,16 +91,15 @@
           </div>
 
           <div class="bad-look">
-            <h2 class="hero__text hero__text--sub">
-              <!--<strong>We are...</strong> <br />
-              <br />-->
+            <!--<strong>We are...</strong> <br />
+            <br />-->
+            <!-- <h2 class="hero__text hero__text--sub">
               The Obafemi Awolowo University community has always been home to amazing conversations, tenacious humans, radical innovations, a little too many tote bags, and—of course—its iconic bats. Now, it’s going to be a hotspot for ideas worth spreading by humans worth listening to on grounds we’ve come to love.
               And whether you identify as an Awo boy or a Maintenance chick, a fresher or a stallite, a T-shirt fanatic or a fashion icon, an environmentally-conscious trekker or a bike addict, a shana or a… well, whatever—there’s a TEDxOAU Talk that’s just right for you.
               We’d love for you to join us.
-            </h2>
+            </h2> -->
             <h2 class="hero__text hero__text--font">
-              this site and all it’s components in pay homage to helvetica and
-              swiss typography design
+                "Money will not last. Fame will not last. But how you touch others'lives will always stay behind!" <Br> _Avijeet Das
             </h2>
           </div>
 
@@ -122,7 +121,7 @@
 
         <div class="blog__wrapper">
           <h2 class="blog__header container">
-            TED, TEDx, and TEDxOAU:
+            Our Blog Is Live!!!
           </h2>
           <article class="blog__container container">
             <div class="blog__description grid">
@@ -148,7 +147,7 @@
 
         <div class="blog__wrapper de-active">
           <h2 class="blog__header container">
-            Our top 10 TEDx talks.
+             Our Blog Is Live!!!
           </h2>
           <article class="blog__container container">
             <div class="blog__description grid">
@@ -173,7 +172,7 @@
 
         <div class="blog__wrapper de-active">
           <h2 class="blog__header container">
-            Volunteers are now On-board
+             Our Blog Is Live!!!
           </h2>
           <article class="blog__container container">
             <div class="blog__description grid">
@@ -198,7 +197,7 @@
 
         <div class="blog__wrapper de-active">
           <h2 class="blog__header container">
-            What should you expect from TEDxOAU
+             Our Blog Is Live!!!
           </h2>
           <article class="blog__container container">
             <div class="blog__description grid">
@@ -347,6 +346,10 @@
         </div>
       </div>
     </footer>
+        <!--=============== SCROLL UP ===============-->
+    <a href="#" class="scrolltop" id="scroll-top">
+        <i class='bx bx-up-arrow-alt scrolltop--icon'></i>
+    </a>
 
     <!-- This is the javascript code for the TEDxOAU animation on the home page-->
     <script src="vendor/js/script.js"></script>
