--- a/team.html
+++ b/team.html
@@ -13,42 +13,12 @@
     <title>Meet The Team - TEDxOAU</title>
     <link rel="icon" type="image/x-icon" href="resource/tedx_favicon.png" />
   </head>
-  <body class="bg-pattern">
-    <!-- Background Pattern -->
-    <!-- <div class="bg-pattern">
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-      <div class="bg-pattern__span"></div>
-    </div> -->
-    <!--  End Background Pattern -->
+  <body>
+
     <main class="hero">
       <nav class="nav__mini">
-        <a href="about.html"><i class="bx bx-right-arrow-alt"></i></a>
+        <a href="index.html" target="_blank"><i class="bx bx-left-arrow-alt"></i></a>
+        <a href="about.html" target="_blank"><i class="bx bx-right-arrow-alt"></i></a>
       </nav>
 
       <header class="team-header container">
