--- a/index.html
+++ b/index.html
@@ -80,24 +80,19 @@
           <div class="good-look">
             <div class="home__container--brief">
               <h2>
-                In the spirit of ideas worth spreading, TEDx is a program of
-                local, self-organized events that bring people together to share
-                a TED-like experience. At a TEDx event, TED Talks video and live
-                speakers combine to spark deep discussion and connection. in
-                summary we’re TEDX by the greatest, for the greatest
+                In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. Our event is called TEDxOAU, where x = independently organized TED event. At our TEDxOAU event, TED Talks video and live speakers will combine to spark deep discussion and connection in a small group. The TED Conference provides general guidance for the TEDx program, but individual TEDx events, including ours, are self-organized.
               </h2>
             </div>
             <embed src="resource/scroll-animation.gif" class="text__scroll" />
           </div>
 
           <div class="bad-look">
-            <!--<strong>We are...</strong> <br />
-            <br />-->
-            <!-- <h2 class="hero__text hero__text--sub">
+            <h2 class="hero__text hero__text--sub">
+              <strong class="blog__title">We are...</strong><br>
               The Obafemi Awolowo University community has always been home to amazing conversations, tenacious humans, radical innovations, a little too many tote bags, and—of course—its iconic bats. Now, it’s going to be a hotspot for ideas worth spreading by humans worth listening to on grounds we’ve come to love.
               And whether you identify as an Awo boy or a Maintenance chick, a fresher or a stallite, a T-shirt fanatic or a fashion icon, an environmentally-conscious trekker or a bike addict, a shana or a… well, whatever—there’s a TEDxOAU Talk that’s just right for you.
               We’d love for you to join us.
-            </h2> -->
+            </h2>
             <h2 class="hero__text hero__text--font">
                 "Money will not last. Fame will not last. But how you touch others'lives will always stay behind!" <Br> _Avijeet Das
             </h2>
@@ -125,6 +120,7 @@
           </h2>
           <article class="blog__container container">
             <div class="blog__description grid">
+              <h3 class=blog__title>TED, TEDx, and TEDxOAU: What makes them all different, yet special.</h3>
               <p class="blog__summary">
                 New to the wonderful world of TED?
                 No problem!
@@ -151,6 +147,7 @@
           </h2>
           <article class="blog__container container">
             <div class="blog__description grid">
+              <h3 class=blog__title>Our top 10 TEDx talks.</h3>
               <p class="blog__summary">
                 From Chimamanda Ngozi Adichie to Malcolm Gladwell and Peace Itimi, learn what members of the TEDxOAU team consider the creme de la creme of TED Talks.
                 Disclaimer: All TED Talks rock!
@@ -176,6 +173,7 @@
           </h2>
           <article class="blog__container container">
             <div class="blog__description grid">
+              <h3 class=blog__title>Volunteers are now On-board</h3>
               <p class="blog__summary">
                 Our Volunteers are aboard and we're so excited. So much so that we had a chit-chat with the Volunteer management team how it went getting them on-board.
                 Have a look.
@@ -197,10 +195,11 @@
 
         <div class="blog__wrapper de-active">
           <h2 class="blog__header container">
-             Our Blog Is Live!!!
+            Our Blog Is Live!!!
           </h2>
           <article class="blog__container container">
             <div class="blog__description grid">
+              <h3 class=blog__title>What should your expect from TEDxOAU?</h3>
               <p class="blog__summary">
                 Either this is going to be your first TEDx event or you've been to several others, your gut-feeling still tells you TEDxOAU is going to be different, but you can't place it.
                 Here's what to expect.
@@ -227,8 +226,8 @@
       <section class="updates-section section">
         <div class="updates container">
           <a href="https://instagram.com/tedxoauofficial?igshid=YmMyMTA2M2Y=" target="_blank" class="updates__box">
-            <span class="updates__text">Follow Us</span></a
-          >
+            <span class="updates__text">Follow Us</span>
+          </a>
           <a href="#" target="_blank" class="updates__box updates__box--white">
             <span class="updates__text updates__text--red">Speaker</span>
           </a>
@@ -345,6 +344,8 @@
           </div>
         </div>
       </div>
+
+      <p class="footer__tedx">This independent TEDx event is operated under license from TED.</p>
     </footer>
         <!--=============== SCROLL UP ===============-->
     <a href="#" class="scrolltop" id="scroll-top">
