--- a/team.html
+++ b/team.html
@@ -41,32 +41,6 @@
           </div>
           <div class="team__head--column">
             <h3 class="text__big">TEDxOAU</h3>
-            <!--<p class="team__text">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam
-              numquam officiis illo minima corporis nulla voluptas repellendus
-              aliquam architecto quisquam nostrum omnis impedit pariatur,
-              sapiente animi, aspernatur non. Officia cum delectus corporis quod
-              distinctio, vel nesciunt quo eligendi soluta neque corrupti non
-              impedit laborum maiores magnam commodi nihil saepe! Perspiciatis
-              veniam consectetur sapiente est numquam sequi libero maxime eos
-              voluptatum dolorem! Quia reiciendis voluptates quas sapiente
-              perferendis commodi omnis tempore, autem obcaecati ipsam sit
-              ratione consectetur iusto modi minus numquam dolores. Doloremque
-              quasi ad cumque quae, labore, similique maxime corporis repellat
-              inventore odit animi facilis suscipit adipisci dolore recusandae
-              ipsa nemo veniam. Libero ex nemo quos recusandae repellendus non
-              natus tempora, molestias consequuntur sit ut iusto ullam vitae,
-              eos placeat! Suscipit tenetur impedit voluptates fuga rem optio
-              debitis ratione, deleniti aperiam nostrum odio molestias sapiente
-              nihil illum minima labore necessitatibus velit aut. Veritatis odit
-              modi sit dicta quos praesentium quisquam necessitatibus,
-              accusantium, alias excepturi, iste magni? Cupiditate eligendi,
-              natus fugit in doloremque illo iure quis? Sequi optio inventore
-              saepe quod tenetur autem. Natus quidem quia iusto alias, voluptate
-              dolore odio quis assumenda expedita provident reprehenderit
-              nesciunt repudiandae est, optio corrupti! Dolores quos culpa cum
-              rem optio! Hic, ipsa voluptatem. Quaerat.
-            </p>-->
           </div>
           <div class="team__group grid">
             <!-- Zion -->
@@ -457,8 +431,8 @@
                 <p>
                   When you think of me, think of light in a dark room. <br>
                   I am Tosin and I love to light up people’s lives. Whether it’s with my sense of humor or wealth of knowledge, I love to be the one who touches people’s lives significantly leaving them with an unforgettable experience. <br>
-                  I love everything around writing, leadership, and personal growth.  I wear many hats but whatever capacity I find myself in, it will always be around people and growth<br>It’s my why of TEDxOAU.
-                  now.
+                  I love everything around writing, leadership, and personal growth.  I wear many hats but whatever capacity I find myself in, it will always be around people and growth<br>
+                  It’s my why of TEDxOAU.
                 </p>
               </div>
             </div>
@@ -545,7 +519,7 @@
         <!-- End of Team Preview -->
       </section>
 
-      <footer class="footer team-footer">
+      <footer class="footer team-footer container">
         <div class="footer__container--lower">
           <div class="footer__container--lower_mail">
             <h2>Want to stay updated?</h2>
@@ -615,6 +589,7 @@
             </div>
           </div>
         </div>
+        <p class="footer__tedx">This independent TEDx event is operated under license from TED.</p>
       </footer>
     </main>
 
