--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <section class="home" id="home">
         <div class="home__container--intro container">
           <h1>
-            <span class="intro-title">Welcome <br /> To</span>
+            <span class="intro-title">Welcome <br /> to</span>
             <span class="intro-subtitle" id="word">TEDxOAU</span>
           </h1>
         </div>
