--- a/about.html
+++ b/about.html
@@ -24,56 +24,7 @@
     </nav>
     <header class="about__header"></header>
     <h2 class="about__header-title">About</h2>
-    <!-- <p class="about__text">
-      TED<br />
-      <br />
-      TED is a nonprofit organization devoted to Ideas Worth Spreading. Started
-      as a four-day conference in California 30 years ago, TED has grown to
-      support its mission with multiple initiatives. The two annual TED
-      Conferences invite the world’s leading thinkers and doers to speak for 18
-      minutes or less. Many of these talks are then made available, free, at
-      TED.com. TED speakers have included Bill Gates, Jane Goodall, Elizabeth
-      Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe Starck, Ngozi
-      Okonjo-Iweala, Sal Khan and Daniel Kahneman. The annual TED Conference
-      takes place each spring in Vancouver, British Columbia. TED’s media
-      initiatives include TED.com, where new TED Talks are posted daily; TED
-      Translators, which provides subtitles and interactive transcripts as well
-      as translations from volunteers worldwide; the educational initiative
-      TED-Ed. TED has established The Audacious Project that takes a
-      collaborative approach to funding ideas with the potential to create
-      change at thrilling scale; TEDx, which supports individuals or groups in
-      hosting local, self- organized TED-style events around the world, and the
-      TED Fellows program, helping world-changing innovators from around the
-      globe to amplify the impact of their remarkable projects and activities.
-      Follow TED on Twitter http://twitter.com/TEDTalks or on Facebook at
-      http://www.facebook.com/TED <br />
-      <br />
-
-      TEDx<br />
-      <br />
-      In the spirit of ideas worth spreading, TED has created a program called
-      TEDx. TEDx is a program of local, self-organized events that bring people
-      together to share a TED-like experience. Our event is called TEDxOAU,
-      where x = independently organized TED event. At our TEDxOAU event, TED
-      Talks video and live speakers will combine to spark deep discussion and
-      connection in a small group. The TED Conference provides general guidance
-      for the TEDx program, but individual TEDx events, including ours, are
-      self-organized.<br />
-      <br />
-
-      TEDxOAU <br />
-      <br />
-      TEDxOAU is an independently organized TED event under an authorized
-      license from TED at Obafemi Awolowo University, Ile-Ife. It is an
-      initiative that aims to bring together a socially conscious community in
-      OAU and make the youths involved in the spectrum of IDEAS WORTH SPREADING.
-      Holding for the second time after a four-year hiatus break, TEDxOAU
-      targets an audience of students, young professionals and academic members
-      of staff. The conference hopes to shine the spotlight on interdisciplinary
-      speakers — including those from the local community — who will ignite
-      action, and encourage innovation, and critical discussion. About the Team
-      (Completed)
-    </p> -->
+    
 
     <main class="main">
       <section class="about section">
@@ -141,6 +92,86 @@
           </div>
         </div>
       </section>
+      <!-- ================FOOTER============ -->
+    <footer class="footer">
+      <div class="footer__container container">
+        <div class="footer__container--lower">
+          <div class="footer__container--lower_mail">
+            <h2>Want to stay updated?</h2>
+            <p>
+              TEDxOAU is going to take Ogbafemi by storm and we want to put you in its eye:<br>       but we’d like to get in your DMs first. <br>
+              Drop your email address to get all TEDxOAU updates so you don’t miss a thing. <br>
+              We promise not to spam you!
+
+            </p>
+            <div class="footer__container--lower_input">
+              <button class="lower_input-btn">Email</button>
+              <div class="lower_input-form">
+                <input type="text" placeholder="Your Email" />
+              </div>
+              <div class="lower_input-icon">
+                <a href="#"><i class="bx bx-right-arrow-alt"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="footer__container--lower_links">
+            <div class="footer__list">
+              <ul>
+                <li class="footer__list-item">
+                  <a href="#">Home</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="about.html">About</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="team.html">Meet Our Team</a>
+                </li>
+                
+              </ul>
+
+              <ul>
+                <li class="footer__list-item"><a href="#">Sponsor</a></li>
+                <li class="footer__list-item"><a href="https://tedxoau.com/blog/">Blog</a></li>
+                <li class="footer__list-item"><a href="mailto:info@tedxoau.com">Contact Us</a></li>
+                <!-- <li class="footer__list-item"><a href="#">FAQs</a></li>
+                <li class="footer__list-item">
+                  <a href="#">Programme Schedule</a>
+                </li>
+                <li class="footer__list-item"><a href="#">Speaker</a></li>
+                <li class="footer__list-item">
+                  <a href="#">Previous Sessions</a>
+                </li>
+                <li class="footer__list-item"><a href="#">Contact Us</a></li>-->
+              </ul>
+            </div>
+
+            <div class="footer__social">
+              <a
+                href="https://web.facebook.com/tedxoauofficial/"
+                target="_blank"
+                ><i class="bx bxl-facebook"></i
+              ></a>
+              <a
+                href="https://twitter.com/tedxoauofficial?t=2DYvKyfYjTuPeP8kJAMtdw&s=09"
+                ><i class="bx bxl-twitter" target="_blank"></i
+              ></a>
+              <a
+                href="https://www.instagram.com/accounts/login/?next=/tedxoauofficial/"
+                ><i class="bx bxl-instagram" target="_blank"></i
+              ></a>
+              <a href="https://www.linkedin.com/company/tedxoauofficial/"
+                ><i class="bx bxl-linkedin" target="_blank"></i
+              ></a>
+              <!-- <a href="#"><i class="bx bxl-youtube"></i></a>
+              <a href="#"><i class="bx bxl-vimeo"></i></a> -->
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <p class="footer__tedx">This independent TEDx event is operated under license from TED.</p>
+    </footer>
     </main>
   </body>
 </html>
