--- a/team.html
+++ b/team.html
@@ -14,12 +14,49 @@
     <link rel="icon" type="image/x-icon" href="resource/tedx_favicon.png" />
   </head>
   <body>
+        <!-- ================HEADER============ -->
+    <header class="header scroll-header" id="header">
+      <nav class="nav container">
+        <div class="nav__logo">
+          <a href="#" class="nav__logo">
+            <img src="./resource/tedx_oau.png" alt="TEDxOAU Logo" />
+          </a>
+        </div>
+
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <div class="nav-close" id="nav-close">
+              <i class="bx bx-x-circle"></i>
+            </div>
+            <li class="nav__items">
+              <a href="index.html" class="nav__link active--link">Home</a>
+            </li>
+
+            <li class="nav__items">
+              <a href="team.html" class="nav__link">Team</a>
+            </li>
+
+            <li class="nav__items">
+              <a href="about.html" class="nav__link">About</a>
+            </li>
+
+            <li class="nav__items">
+              <a href="https://tedxoau.com/blog/" class="nav__link">Blog</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="nav__toggle" id="nav-toggle">
+          <i class="bx bx-menu"></i>
+        </div>
+      </nav>
+    </header>
 
     <main class="hero">
-      <nav class="nav__mini">
+      <!-- <nav class="nav__mini">
         <a href="index.html" target="_blank"><i class="bx bx-left-arrow-alt"></i></a>
         <a href="about.html" target="_blank"><i class="bx bx-right-arrow-alt"></i></a>
-      </nav>
+      </nav> -->
 
       <header class="team-header container">
         <h1>
@@ -509,8 +546,9 @@
               </div>
               <div class="preview__bio">
                 <p>
-                  When you meet me for the first time, you’re immediately going to connect like we’re old friends. I am a warm and friendly person who loves connecting with people every chance I get. I am also one person who strongly believes in changing the world from his ‘little’ space, which is what brought me to TEDxOAU. <br>
-                  I am a third-year university student who has always had a passion for computers and technology. I hope to use my broad educational background with excellent analytical, technical, and programming skills to thrive as a successful software engineer.
+                  <!-- When you meet me for the first time, you’re immediately going to connect like we’re old friends. I am a warm and friendly person who loves connecting with people every chance I get. I am also one person who strongly believes in changing the world from his ‘little’ space, which is what brought me to TEDxOAU. <br>
+                  I am a third-year university student who has always had a passion for computers and technology. I hope to use my broad educational background with excellent analytical, technical, and programming skills to thrive as a successful software engineer. -->
+                  MY fascination with technology doesn't just come from obsession with curiosity  how computers work. It also comes from the curiosity about how everything works, from the tiniest components to the most complex systems. I have been a voracious reader, always wanting to know more about the latest development in the field.<br> I am a warm and friendly person who loves connecting with people every chance I get. I am also one person who strongly believes in changing the world from his ‘little’ space, which is what brought me to TEDxOAU.
                 </p>
               </div>
             </div>
@@ -524,7 +562,7 @@
           <div class="footer__container--lower_mail">
             <h2>Want to stay updated?</h2>
             <p>
-              TEDxOAU is going to take Ogbafemi by storm and we want to put you in its eye:<br>       but we’d like to get in your DMs first. <br>
+              TEDxOAU is going to take Obafemi by storm and we want to put you in its eye:<br>       but we’d like to get in your DMs first. <br>
               Drop your email address to get all TEDxOAU updates so you don’t miss a thing. <br>
               We promise not to spam you!
             </p>
