--- a/about.html
+++ b/about.html
@@ -59,8 +59,11 @@
         ><i class="bx bx-right-arrow-alt"></i
       ></a>
     </nav> -->
-    <header class="about__header"></header>
-    <h2 class="about__header-title">About</h2>
+    <header class="about__header">
+      <img src="resource/about.jpg" alt="" srcset="" class="about__img">
+
+    </header>
+    <h2 class="about__header-title">History</h2>
     
 
     <main class="main">
@@ -95,7 +98,6 @@
               <a href="http://www.facebook.com/TED">Facebook</a>
             </p>
           </div>
-
           <div class="about__container--description">
             <h2 class="about__container--description_title">TEDx</h2>
             <p class="about__container--description_summary">
