--- a/team.html
+++ b/team.html
@@ -67,9 +67,9 @@
         <div class="team__container container">
           <div class="team__head--row">
             <img
-              src="resource/team_image.jpeg"
+              src="resource/team_image.jpg"
               class="team__head-img"
-              alt="Team_page"
+              alt="team__page"
             />
             <p class="team__text">
               A large group of volunteers dedicate their time and energy to set up events and build our community, acting as personal ambassadors for change and innovation. With their professional skills and knowledge, our volunteers bring ideas to life from behind the scenes to the day of the events. We are a hundred percent volunteer-led organisation and are run solely on the enthusiasm of our partners, collaborators and volunteers. Together we bring ideas to life that go beyond limitation and pushes boundaries to create a better city, a better world.
