--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
       <img src="resource/about.jpg" alt="" srcset="" class="about__img">
 
     </header>
-    <h2 class="about__header-title">History</h2>
+    <h2 class="about__header-title">Our Story</h2>
     
 
     <main class="main">
