Team background scrolling changes

--- a/team.html
+++ b/team.html
@@ -13,7 +13,7 @@
     <title>Meet The Team - TEDxOAU</title>
     <link rel="icon" type="image/x-icon" href="resource/tedx_favicon.png" />
   </head>
-  <body>
+  <body class="body">
         <!-- ================HEADER============ -->
     <header class="header scroll-header" id="header">
       <nav class="nav container">
@@ -241,7 +241,7 @@
               </div>
               <div class="team__details">
                 <h3 class="team__name">Samuel Jolayemi</h3>
-                <p class="team__role">Web Development Lead</p>
+                <p class="team__role">Web Developer</p>
               </div>
             </div>
             <!-- Tobi -->
@@ -257,7 +257,7 @@
               </div>
               <div class="team__details">
                 <h3 class="team__name">Tobiloba Ibraheem</h3>
-                <p class="team__role">Web Development Co-Lead</p>
+                <p class="team__role">Web Developer</p>
               </div>
             </div>
           </div>
